After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698266 - Handle "Decrypt Integrity Check" kerberos error as password invalid
Handle "Decrypt Integrity Check" kerberos error as password invalid
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
3.10
Depends on:
Blocks:
 
 
Reported: 2013-04-18 08:19 UTC by Stef Walter
Modified: 2013-04-23 14:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
user-accounts: Detect correct password incorrect krb5 code (1.20 KB, patch)
2013-04-19 18:15 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2013-04-18 08:19:02 UTC
The "Decrypt Integrity Check" error returned from kerberos should be handles as password invalid. As noted here: http://www.cmf.nrl.navy.mil/krb/kerberos-faq.html#badpass
Comment 1 Stef Walter 2013-04-19 18:15:01 UTC
Created attachment 241942 [details] [review]
user-accounts: Detect correct password incorrect krb5 code

Oddly enough this is the standard krb5 error code for an
incorrect password. Which error code is returned depends
on how the protocol is being used. FreeIPA returns this one.
Comment 2 Stef Walter 2013-04-19 18:15:53 UTC
Tested on gnome-3-8 branch, also applies to master.
Comment 3 Bastien Nocera 2013-04-22 15:46:16 UTC
Review of attachment 241942 [details] [review]:

> Detect correct password incorrect krb5 code
I can't parse that.

Looks good to commit after fixing the subject line to be clearer (fix "incorrect password" error detection with FreeIPA?)